fixed unreadable text in bulk unfriend selection message.

--- a/html/src/theme.material3.scss
+++ b/html/src/theme.material3.scss
@@ -1403,6 +1403,7 @@ img.x-link.el-popover__reference {
     margin-bottom: 24px;
     max-height: 500px;
     scroll-margin-left: 8px;
+    word-break: break-word;
 }
 .el-message-box__content > *,
 .el-dialog__body > * {
